loopdowhile.Poucet1.scala.error
Erreur de compilation :
Poucet1:15: error: value avance is not a member of Unit
possible cause: maybe a semicolon is missing before `value avance'?
} avance()
  ^